k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inv-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inv-backend
  template:
    metadata:
      labels:
        app: inv-backend
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: backend
          image: ghcr.io/inventory-proj/inv-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 8000
  selector:
    app: inv-backend
