k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inv-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inv-frontend
  template:
    metadata:
      labels:
        app: inv-frontend
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: frontend
          image: ghcr.io/inventory-proj/inv-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
  selector:
    app: inv-frontend
