k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Эта строчка заставит cert-manager выпустить сертификат
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # Этот блок включает HTTPS-шифрование для домена
  tls:
    - hosts:
        - inv.e-laba52.ru
      secretName: inventory-tls-secret
  rules:
    - host: inv.e-laba52.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
